делает сетки страниц

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,6 @@
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
 
-<!--
 
   <style>
     html {
@@ -38,18 +37,17 @@
   </style>
   <link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
   <script src="../node_modules/pixel-glass/script.js"></script>
--->
 
 
 </head>
 
 <body class="page__body">
 
-<!--<style>
+<style>
   body {
     opacity: 0.5;
   }
-</style>-->
+</style>
 
 <header class="page__header">
   <div class="header container">
@@ -80,8 +78,7 @@
   <h1 class="visually-hidden">Каталог здорового питания Кэт-энерджи</h1>
 
   <section class="catalog">
-
-    <div class="catalog-inner container">
+    <div class="container">
       <h2 class="catalog__title">Каталог продукции</h2>
 
       <div class="catalog__products">
