--- a/source/index.html
+++ b/source/index.html
@@ -62,13 +62,13 @@
     <nav class="header-nav <!--header-nav&#45;&#45;noJS-->">
       <ul class="header-nav__list">
         <li class="header-nav__item">
-          <a class="header-nav__link header-nav__link--active">Главная</a>
+          <a class="header-nav__link header-nav__link--white header-nav__link--active">Главная</a>
         </li>
         <li class="header-nav__item">
-          <a class="header-nav__link" href="catalog.html">Каталог продукции</a>
+          <a class="header-nav__link header-nav__link--white" href="catalog.html">Каталог продукции</a>
         </li>
         <li class="header-nav__item">
-          <a class="header-nav__link" href="form.html">Подбор программы</a>
+          <a class="header-nav__link header-nav__link--white" href="form.html">Подбор программы</a>
         </li>
       </ul>
     </nav>
