делает микро-сетки страниц

--- a/source/form.html
+++ b/source/form.html
@@ -10,6 +10,7 @@
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
 
+<!--
 
   <style>
     html {
@@ -38,16 +39,17 @@
   <link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
   <script src="../node_modules/pixel-glass/script.js"></script>
 
+-->
 
 </head>
 
 <body class="page__body">
-
+<!--
 <style>
   body {
     opacity: 0.6;
   }
-</style>
+</style>-->
 
 <header class="page__header">
   <div class="header container">
@@ -86,7 +88,7 @@
           <legend class="visually-hidden">Информация о Вашем котике</legend>
           <ul class="form-group__list form-group__list--cat-info">
             <li class="form-group__item">
-              <label class="form-group__label" for="cat-name">Имя:<sup>*</sup></label>
+              <label class="form-group__label" for="cat-name">Имя:*</label>
               <input class="form-group__input" type="text" name="cat-name" id="cat-name" placeholder="Барсик" required>
             </li>
             <li class="form-group__item">
@@ -109,7 +111,7 @@
             </li>
             <li class="form-group__item">
               <input class="form-group__radio visually-hidden" id="radio-2" type="radio" name="purpose-radio" value="fatting">
-              <label class="form-group__label form-group__label--radio" for="radio-2">Набор веса</label>
+              <label class="form-group__label form-group__label--radio" for="radio-2">Набор массы</label>
             </li>
             <li class="form-group__item">
               <input class="form-group__radio visually-hidden" id="radio-3" type="radio" name="purpose-radio" value="need-help">
@@ -120,7 +122,7 @@
       </div>
 
       <fieldset class="form-group form-group--master">
-        <legend class="form-group__legend">Контактные данные (владельца кота)</legend>
+        <legend class="form-group__legend form-group__legend--master">Контактные данные (владельца кота)</legend>
         <ul class="form-group__list form-group__list--master">
           <li class="form-group__item">
             <label class="form-group__label" for="person__email">E-mail:<sup>*</sup></label>
@@ -134,13 +136,13 @@
       </fieldset>
 
       <fieldset class="form-group form-group--comment">
-        <legend class="form-group__legend">Комментарий</legend>
+        <legend class="form-group__legend form-group__legend--comment">Комментарий</legend>
         <label class="visually-hidden" for="person-comment">Расскажите обо всех повАдках кота</label>
         <textarea class="form-group__input form-group__input--comment" name="person-comment" id="person-comment" placeholder="Расскажите обо всех повАдках кота"></textarea>
       </fieldset>
 
       <fieldset class="form-group form-group--add">
-        <legend class="form-group__legend">Дополнительно</legend>
+        <legend class="form-group__legend form-group__legend--add ">Дополнительно</legend>
         <ul class="form-group__list form-group__list--add">
           <li class="form-group__item form-group__item--checkbox">
             <input class="form-group__checkbox visually-hidden" type="checkbox" name="sweetener" id="checkbox-1" checked>
@@ -162,7 +164,7 @@
       </fieldset>
 
       <div class="form__submit">
-        <button class="main-link prc" type="submit">Отправить заявку</button>
+        <button class="form__button main-link" type="submit">Отправить заявку</button>
         <span class="form__span"><sup>*</sup> &mdash; Обязательные поля</span>
       </div>
 
@@ -181,7 +183,7 @@
     </div>
 
     <div class="footer__map map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253322!2d30.320858716146866!3d59.938716481876234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1639073287409!5m2!1sru!2sru" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>    </div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253322!2d30.320858716146866!3d59.938716481876234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1639073287409!5m2!1sru!2sru" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>    </div>
 
     <nav class="footer-nav">
       <div class="footer-inner container">
