делает тянущуюся картинку в блоке каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -45,13 +45,11 @@
 
 <body class="page__body">
 
-<!--
-<style>
+<!--<style>
   body {
     opacity: 0.5;
   }
-</style>
--->
+</style>-->
 
 <header class="page__header">
   <div class="header container">
